# mathformsmk

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: mathformsmk.rst  modules.rst
mathformsmk/: mathformsmk.py
tests/: test_mathformsmk.py
