[tool.poetry]
name = "mathformsmk"
version = "0.1.0"
description = "This package implements simple mathematical equations."
authors = ["Karlos Muradyan <carlosmuradyan2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
